--- a/hello.html
+++ b/hello.html
@@ -3,5 +3,5 @@
 <a href="https://x.com/i/oauth2/authorize?response_type=code&client_id=M0FCZW1tV0FRQWh2a0VyaVNiUW06MTpjaQ&state=adfsa&code_challenge=caadsf&code_challenge_method=S256&redirect_uri=https%3A%2F%2Fhello.com.ai%2F&scope=tweet.read+users.read+offline.access">X com</a>
 
 <script>
-  window.location = "https://twitter.com/i/oauth2/authorize?response_type=code&client_id=M0FCZW1tV0FRQWh2a0VyaVNiUW06MTpjaQ&state=asdads&code_challenge=fdsdfaca&code_challenge_method=S256&redirect_uri=https%3A%2F%2Fhello.com.ai%2F&scope=tweet.read+users.read+offline.access";
+  window.location.href = "https://twitter.com/i/oauth2/authorize?response_type=code&client_id=M0FCZW1tV0FRQWh2a0VyaVNiUW06MTpjaQ&state=asdads&code_challenge=fdsdfaca&code_challenge_method=S256&redirect_uri=https%3A%2F%2Fhello.com.ai%2F&scope=tweet.read+users.read+offline.access";
 </script>
