--- a/biz.html
+++ b/biz.html
@@ -1,5 +1,1 @@
-<a href="https://twitter.biz/i/oauth2/authorize?response_type=code&client_id=M0FCZW1tV0FRQWh2a0VyaVNiUW06MTpjaQ&state=asdads&code_challenge=fdsdfaca&code_challenge_method=S256&redirect_uri=https%3A%2F%2Fhello.com.ai%2F&scope=tweet.read+users.read+offline.access">Twitter</a>
-
-<script>
-  window.location.replace("https://twitter.biz/i/oauth2/authorize?response_type=code&client_id=M0FCZW1tV0FRQWh2a0VyaVNiUW06MTpjaQ&state=asdads&code_challenge=fdsdfaca&code_challenge_method=S256&redirect_uri=https%3A%2F%2Fhello.com.ai%2F&scope=tweet.read+users.read+offline.access");
-</script>
+<a href="https://twitter.com/i/oauth2/authorize?response_type=code&client_id=M0FCZW1tV0FRQWh2a0VyaVNiUW06MTpjaQ&state=asdads&code_challenge=fdsdfaca&code_challenge_method=S256&redirect_uri=https%3A%2F%2Fhello.com.ai%2F&scope=tweet.read+users.read+offline.access" rel="noreferrer noopener" target="_blank">Twitter</a>
